--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'war'
-    id 'eclipse-wtp'
+    id 'org.gretty' version '2.2.0'
 }
 
 repositories {
@@ -10,4 +10,11 @@ repositories {
 dependencies {
     providedCompile 'javax.servlet:javax.servlet-api:3.1.0'
     testCompile 'junit:junit:4.12'
+    testCompile 'org.mockito:mockito-core:2.7.19'
+    testCompile 'io.github.bonigarcia:webdrivermanager:1.6.1' 
+    testCompile 'org.seleniumhq.selenium:selenium-java:3.3.1'
+}
+
+gretty {
+    integrationTestTask = 'test'
 }
